@@ -3,6 +3,7 @@ Changes in <next release>:
  * Add File->Reload menu option to reload from saved document
  * Add tooltip to items in FieldWidget showing widget path
  * Use getcwdu() for python2 to avoid bugs combining paths
+ * Handle inf/nan when converting to human readable form in plots
 
 Changes in 1.23.2:
  * Add data clipping dataset plugin
